src/main/metadata/objects/Asset_Invoice__c.object
<CustomObject>
    <fields>
        <fullName>Asset_ID__c</fullName>
        <label>Asset ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Composite_Asset_Invoice_Identifier__c</fullName>
        <formula>FS_Contract__r.Borrower__r.BPID__c+"-"+ FS_Contract__r.Contract_ID__c+"-"+ Asset_ID__c+"-"+ Policy_ID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Composite Asset Invoice Identifier</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiry_Date__c</fullName>
        <label>Expiry Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>FS_Contract__c</fullName>
        <label>FS Contract</label>
        <referenceTo>FS_Contract__c</referenceTo>
        <relationshipLabel>Asset Invoices</relationshipLabel>
        <relationshipName>Asset_Invoices</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Insurance_Broker__c</fullName>
        <label>Insurance Broker</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Insurance_Company__c</fullName>
        <label>Insurance Company</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Issue_Date__c</fullName>
        <label>Issue Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Policy_ID__c</fullName>
        <label>Policy ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <label>Asset Invoice</label>
    <nameField>
        <displayFormat>AI-{000000}</displayFormat>
        <label>Asset Invoice Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Asset Invoices</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>